force-app/main/default/objects/cgcloud__CP_Pricing_Condition_Stage__c/cgcloud__CP_Pricing_Condition_Stage__c.object-meta.xml
<CustomObject>
    <description>Staging table for conditions used by the complex pricing.</description>
    <label>Pricing Condition Stage</label>
    <nameField>
        <displayFormat>PCS-{0000000}</displayFormat>
        <label>Pricing Condition Stage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing Condition Stages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>