force-app/main/default/objects/cgcloud__CP_Pricing_Condition_Stage__c/fields/cgcloud__Account__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to Account</description>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pricing Condition Stages</relationshipLabel>
    <relationshipName>Pricing_Condition_Stages</relationshipName>
    <type>Lookup</type>
</CustomField>