force-app/main/default/objects/cgcloud__CP_Pricing_Condition_Stage__c/fields/cgcloud__Account_Set__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Account_Set__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to Customer Set</description>
    <label>Customer Set</label>
    <referenceTo>cgcloud__Account_Set__c</referenceTo>
    <relationshipLabel>Pricing Condition Stages</relationshipLabel>
    <relationshipName>Pricing_Condition_Stages</relationshipName>
    <type>Lookup</type>
</CustomField>