force-app/main/default/objects/cgcloud__CP_Pricing_Condition_Stage__c/fields/cgcloud__Currency__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Currency__c</fullName>
    <description>Currency of agreement.</description>
    <label>Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>cgcloud__Currency</valueSetName>
    </valueSet>
</CustomField>