force-app/main/default/objects/cgcloud__CP_Pricing_Condition_Stage__c/fields/cgcloud__Denominator__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Denominator__c</fullName>
    <description>Defines a denominator for the condition</description>
    <label>Denominator</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>