force-app/main/default/objects/cgcloud__CP_Pricing_Condition_Stage__c/fields/cgcloud__External_Id__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__External_Id__c</fullName>
    <description>SAP/ERP Condition record number.</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>