force-app/main/default/objects/cgcloud__CP_Pricing_Condition_Stage__c/fields/cgcloud__Key_10__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Key_10__c</fullName>
    <description>Key of the used Key Type.</description>
    <label>Key 10</label>
    <length>80</length>
    <type>Text</type>
</CustomField>