force-app/main/default/objects/cgcloud__CP_Pricing_Condition_Stage__c/fields/cgcloud__Key_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Key_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to Key Type.</description>
    <label>Key Type</label>
    <referenceTo>cgcloud__CP_Key_Type__c</referenceTo>
    <relationshipLabel>Pricing Condition Stages</relationshipLabel>
    <relationshipName>Pricing_Condition_Stages</relationshipName>
    <type>Lookup</type>
</CustomField>