force-app/main/default/objects/cgcloud__CP_Pricing_Condition_Stage__c/fields/cgcloud__Keys_Hash_Code__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Keys_Hash_Code__c</fullName>
    <description>Hash code of all columns which may be used to build the merge key in the target table.</description>
    <externalId>true</externalId>
    <label>Keys Hash Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>