force-app/main/default/objects/cgcloud__CP_Pricing_Condition_Stage__c/fields/cgcloud__Pricing_Condition_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Pricing_Condition_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to Pricing Condition Template.</description>
    <label>Pricing Condition Template</label>
    <referenceTo>cgcloud__CP_Pricing_Condition_Template__c</referenceTo>
    <relationshipLabel>Pricing Condition Stages</relationshipLabel>
    <relationshipName>Pricing_Condition_Stages</relationshipName>
    <type>Lookup</type>
</CustomField>