force-app/main/default/objects/cgcloud__CP_Pricing_Condition_Stage__c/fields/cgcloud__Promotion_Reward_Product__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Promotion_Reward_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promotion Reward Product</label>
    <referenceTo>cgcloud__Promotion_Reward_Product__c</referenceTo>
    <relationshipLabel>Pricing Condition Stages</relationshipLabel>
    <relationshipName>Pricing_Condition_Stages</relationshipName>
    <type>Lookup</type>
</CustomField>