force-app/main/default/objects/cgcloud__CP_Pricing_Condition_Stage__c/fields/cgcloud__Reward__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Reward__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the reward</description>
    <label>Reward</label>
    <referenceTo>cgcloud__Promotion_Reward__c</referenceTo>
    <relationshipLabel>Pricing Condition Stages</relationshipLabel>
    <relationshipName>Pricing_Condition_Stages</relationshipName>
    <type>Lookup</type>
</CustomField>