force-app/main/default/objects/cgcloud__CP_Pricing_Condition_Stage__c/fields/cgcloud__Sort__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sort__c</fullName>
    <description>Controls the sequence of the complex pricing conditions.</description>
    <label>Sort</label>
    <length>4</length>
    <type>Text</type>
</CustomField>