force-app/main/default/objects/cgcloud__CP_Pricing_Condition_Stage__c/fields/cgcloud__Valid_From__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Valid_From__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>From this date on the entry is valid.</description>
    <label>Valid From</label>
    <type>Date</type>
</CustomField>