force-app/main/default/objects/cgcloud__CP_Pricing_Condition_Stage__c/fields/cgcloud__Valid_Thru__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Valid_Thru__c</fullName>
    <defaultValue>DATE(2999,12,31)</defaultValue>
    <description>Until this date the entry is valid.</description>
    <label>Valid Thru</label>
    <type>Date</type>
</CustomField>