force-app/main/default/objects/cgcloud__CP_Pricing_Condition_Stage__c/validationRules/cgcloud__Pricing_Condition_Template_required.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Pricing_Condition_Template_required</fullName>
    <active>true</active>
    <description>The Pricing Condition Template can&apos;t be empty.</description>
    <errorConditionFormula>ISBLANK(cgcloud__Pricing_Condition_Template__c)</errorConditionFormula>
    <errorMessage>The Pricing Condition Template can&apos;t be empty.</errorMessage>
</ValidationRule>