force-app/main/default/objects/cgcloud__CP_Pricing_Condition_Stage__c/listViews/cgcloud__All.listView-meta.xml
<ListView>
    <fullName>cgcloud__All</fullName>
    <columns>NAME</columns>
    <columns>cgcloud__Pricing_Condition_Template__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>cgcloud__Pricing_Condition_Template__c</field>
        <operation>contains</operation>
        <value>Base</value>
    </filters>
    <label>All</label>
</ListView>